--- a/build-system/README
+++ b/build-system/README
@@ -10,3 +10,14 @@ How to build:
 cd root directory
 java -jar ${build_system_path}/target/build-system-1.0-SNAPSHOT.jar $build_file_absolute_path/build.cfg
 
+After running the jar, the android project's layout should be:
+AndroidProject
+  src/ 
+  res/
+  AndroidManifest.xml
+  gen/  (R.java inside)	
+  build/
+    intermediates/classes (.class files)
+	  output/apk/ (apk files inside)
+  AndroidTest.keystore
+  classes.dex
